# flake-watcher

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  package.json
src/: flakes.rs  flakes.ts  index.ts  main.rs  server.ts
