[package]
name = "flake-watcher"
version = "0.1.1"
authors = ["Zebreus"]
rust-version = "1.65"
description = "A simple tool to watch for changes in a nix flake and run a command when it changes"
readme = "README.md"
repository = "https://github.com/zebreus/flake-watcher.git"
homepage = "https://github.com/zebreus/flake-watcher"
license = "MIT"
keywords = ["nix", "flake", "watcher", "nixos", "nixpkgs"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".vscode", "flake.lock", "flake.nix", "default.nix"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
notify = "4.0.0"
